<resources>
    <string translatable="false" name="app_name">Units</string>
    <string translatable="false" name="app_version">4.2</string>
    <string translatable="false" name="app_developer">Calin Tataru</string>
    <string name="action_clear">Clear</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_restart">Restart</string>
    <string name="err_shortcuts">Maximum 4 shortcuts</string>
    <string name="err_could_not_initiate_purchase">Could not initiate purchase</string>
    <string name="err_rates_are_already_up_to_date">Rates are already up to date</string>
    <string name="msg_app_restart_required">App restart required</string>
    <string name="msg_clipboard">Copied to clipboard</string>
    <string name="msg_input">Enter input</string>
    <string name="msg_retrieved_exchange_rates">Retrieved exchange rates for %s</string>
    <string name="msg_thank_you_for_your_contribution">Thank you for your contribution</string>
    <string name="navigation_length">Length</string>
    <string name="navigation_area">Area</string>
    <string name="navigation_volume">Volume</string>
    <string name="navigation_mass">Mass</string>
    <string name="navigation_time">Time</string>
    <string name="navigation_speed">Speed</string>
    <string name="navigation_temperature">Temperature</string>
    <string name="navigation_currency">Currency</string>
    <string name="navigation_fuel">Fuel</string>
    <string name="navigation_storage">Storage</string>
    <string name="navigation_bitrate">Bitrate</string>
    <string name="navigation_angle">Angle</string>
    <string name="navigation_density">Density</string>
    <string name="navigation_frequency">Frequency</string>
    <string name="navigation_flow">Flow</string>
    <string name="navigation_acceleration">Acceleration</string>
    <string name="navigation_force">Force</string>
    <string name="navigation_pressure">Pressure</string>
    <string name="navigation_torque">Torque</string>
    <string name="navigation_energy">Energy</string>
    <string name="navigation_power">Power</string>
    <string name="navigation_viscosity">Viscosity</string>
    <string name="navigation_current">Current</string>
    <string name="navigation_charge">Charge</string>
    <string name="navigation_voltage">Voltage</string>
    <string name="navigation_luminance">Luminance</string>
    <string name="navigation_illuminance">Illuminance</string>
    <string name="navigation_radiation">Radiation</string>
    <string name="navigation_radioactivity">Radioactivity</string>
    <string name="navigation_glucose">Glucose</string>
    <string name="navigation_cholesterol">Cholesterol</string>
    <string name="navigation_calcium">Calcium</string>
    <string name="navigation_electrolytes">Electrolytes</string>
    <string name="navigation_ferritin">Ferritin</string>
    <string name="navigation_haemoglobin">Haemoglobin</string>
    <string name="navigation_creatinine">Creatinine</string>
    <string name="navigation_urea">Urea</string>
    <string name="navigation_albumin">Albumin</string>
    <string name="navigation_liver">Liver enzymes</string>
    <string name="navigation_settings">Settings</string>
    <string name="navigation_feedback">Send feedback</string>
    <string name="navigation_donation">Support development</string>
    <string name="pref_science">Science</string>
    <string name="pref_medical">Medical</string>
    <string-array name="pref_currency"><item>Auto</item><item>Manual</item></string-array>
    <string-array name="pref_theme"><item>Auto</item><item>Day</item><item>Night</item></string-array>
    <string name="pref_shortcuts">Shortcuts</string>
    <string name="pref_version">Version</string>
    <string name="pref_developer">Developer</string>
    <string-array translatable="false" name="pref_currency_values"><item>0</item><item>1</item></string-array>
    <string-array translatable="false" name="pref_theme_values"><item>0</item><item>1</item><item>2</item></string-array>
    <string name="metre">metre</string>
    <string name="kilometre">kilometre</string>
    <string name="mile">mile</string>
    <string name="yard">yard</string>
    <string name="foot">foot</string>
    <string name="inch">inch</string>
    <string name="centimetre">centimetre</string>
    <string name="millimetre">millimetre</string>
    <string name="micrometre">micrometre</string>
    <string name="angstrom">angstrom</string>
    <string name="astronomical_unit">astronomical unit</string>
    <string name="light_year">light-year</string>
    <string name="parsec">parsec</string>
    <string name="nanometre">nanometre</string>
    <string name="picometre">picometre</string>
    <string name="fermi">fermi</string>
    <string name="fathom">fathom</string>
    <string name="furlong">furlong</string>
    <string name="nautical_mile">nautical mile</string>
    <string translatable="false" name="symbol_metre">m</string>
    <string translatable="false" name="symbol_kilometre">km</string>
    <string translatable="false" name="symbol_mile">mi</string>
    <string translatable="false" name="symbol_yard">yd</string>
    <string translatable="false" name="symbol_foot">ft</string>
    <string translatable="false" name="symbol_inch">in</string>
    <string translatable="false" name="symbol_centimetre">cm</string>
    <string translatable="false" name="symbol_millimetre">mm</string>
    <string translatable="false" name="symbol_micrometre">µm</string>
    <string translatable="false" name="symbol_angstrom">Å</string>
    <string translatable="false" name="symbol_astronomical_unit">au</string>
    <string translatable="false" name="symbol_light_year">ly</string>
    <string translatable="false" name="symbol_parsec">pc</string>
    <string translatable="false" name="symbol_nanometre">nm</string>
    <string translatable="false" name="symbol_picometre">pm</string>
    <string translatable="false" name="symbol_fermi">fm</string>
    <string translatable="false" name="symbol_fathom">ftm</string>
    <string translatable="false" name="symbol_furlong">fur</string>
    <string translatable="false" name="symbol_nautical_mile">nmi</string>
    <string name="square_metre">square metre</string>
    <string name="square_kilometre">square kilometre</string>
    <string name="are">are</string>
    <string name="hectare">hectare</string>
    <string name="acre">acre</string>
    <string name="cuerda">cuerda</string>
    <string name="square_yard">square yard</string>
    <string name="square_foot">square foot</string>
    <string name="square_inch">square inch</string>
    <string translatable="false" name="symbol_square_metre">m²</string>
    <string translatable="false" name="symbol_square_kilometre">km²</string>
    <string translatable="false" name="symbol_are">a</string>
    <string translatable="false" name="symbol_hectare">ha</string>
    <string translatable="false" name="symbol_acre">ac</string>
    <string translatable="false" name="symbol_cuerda">cda</string>
    <string translatable="false" name="symbol_square_yard">sq yd</string>
    <string translatable="false" name="symbol_square_foot">sq ft</string>
    <string translatable="false" name="symbol_square_inch">sq in</string>
    <string name="cubic_metre">cubic metre</string>
    <string name="litre">litre</string>
    <string name="millilitre">millilitre</string>
    <string name="cubic_foot">cubic foot</string>
    <string name="cubic_inch">cubic inch</string>
    <string name="imperial_gallon">imperial gallon</string>
    <string name="us_gallon">US gallon</string>
    <string name="imperial_quart">imperial quart</string>
    <string name="us_quart">US quart</string>
    <string name="imperial_pint">imperial pint</string>
    <string name="us_pint">US pint</string>
    <string name="imperial_fluid_ounce">imperial fluid ounce</string>
    <string name="us_fluid_ounce">US fluid ounce</string>
    <string name="imperial_tablespoon">imperial tablespoon</string>
    <string name="us_tablespoon">US tablespoon</string>
    <string name="imperial_teaspoon">imperial teaspoon</string>
    <string name="us_teaspoon">US teaspoon</string>
    <string translatable="false" name="symbol_cubic_metre">m³</string>
    <string translatable="false" name="symbol_litre">L</string>
    <string translatable="false" name="symbol_millilitre">mL</string>
    <string translatable="false" name="symbol_cubic_foot">cu ft</string>
    <string translatable="false" name="symbol_cubic_inch">cu in</string>
    <string translatable="false" name="symbol_imperial_gallon">gal</string>
    <string translatable="false" name="symbol_us_gallon">gal</string>
    <string translatable="false" name="symbol_imperial_quart">qt</string>
    <string translatable="false" name="symbol_us_quart">qt</string>
    <string translatable="false" name="symbol_imperial_pint">pt</string>
    <string translatable="false" name="symbol_us_pint">pt</string>
    <string translatable="false" name="symbol_imperial_fluid_ounce">fl oz</string>
    <string translatable="false" name="symbol_us_fluid_ounce">fl oz</string>
    <string translatable="false" name="symbol_imperial_tablespoon">tbsp</string>
    <string translatable="false" name="symbol_us_tablespoon">tbsp</string>
    <string translatable="false" name="symbol_imperial_teaspoon">tsp</string>
    <string translatable="false" name="symbol_us_teaspoon">tsp</string>
    <string name="kilogram">kilogram</string>
    <string name="stone">stone</string>
    <string name="pound">pound</string>
    <string name="ounce">ounce</string>
    <string name="imperial_ton">imperial ton</string>
    <string name="us_ton">US ton</string>
    <string name="tonne">tonne</string>
    <string name="imperial_megaton">imperial megaton</string>
    <string name="us_megaton">US megaton</string>
    <string name="megatonne">megatonne</string>
    <string name="gram">gram</string>
    <string name="milligram">milligram</string>
    <string name="microgram">microgram</string>
    <string name="carat">carat</string>
    <string name="dram">dram</string>
    <string name="grain">grain</string>
    <string name="troy_pound">troy pound</string>
    <string name="troy_ounce">troy ounce</string>
    <string name="pennyweight">pennyweight</string>
    <string name="atomic_mass_unit">atomic mass unit</string>
    <string name="electron_rest_mass">electron rest mass</string>
    <string translatable="false" name="symbol_kilogram">kg</string>
    <string translatable="false" name="symbol_stone">st</string>
    <string translatable="false" name="symbol_pound">lb</string>
    <string translatable="false" name="symbol_ounce">oz</string>
    <string translatable="false" name="symbol_imperial_ton">tn</string>
    <string translatable="false" name="symbol_us_ton">tn</string>
    <string translatable="false" name="symbol_tonne">t</string>
    <string translatable="false" name="symbol_imperial_megaton">Mtn</string>
    <string translatable="false" name="symbol_us_megaton">Mtn</string>
    <string translatable="false" name="symbol_megatonne">Mt</string>
    <string translatable="false" name="symbol_gram">g</string>
    <string translatable="false" name="symbol_milligram">mg</string>
    <string translatable="false" name="symbol_microgram">µg</string>
    <string translatable="false" name="symbol_carat">ct</string>
    <string translatable="false" name="symbol_dram">dr</string>
    <string translatable="false" name="symbol_grain">gt</string>
    <string translatable="false" name="symbol_troy_pound">lb t</string>
    <string translatable="false" name="symbol_troy_ounce">oz t</string>
    <string translatable="false" name="symbol_pennyweight">dwt</string>
    <string translatable="false" name="symbol_atomic_mass_unit">u</string>
    <string translatable="false" name="symbol_electron_rest_mass">mₑ</string>
    <string name="millisecond">millisecond</string>
    <string name="second">second</string>
</resources>