<shortcuts
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:targetApi="25" >

    <shortcut
        android:enabled="true"
        android:shortcutId="shortcut_length"
        android:icon="@drawable/ic_shortcut_length"
        android:shortcutShortLabel="@string/navigation_length" >

        <intent
            android:targetPackage="com.calintat.units"
            android:action="com.calintat.units.SHORTCUT_LENGTH"
            android:targetClass="com.calintat.units.activities.MainActivity" />

    </shortcut>

    <shortcut
        android:enabled="true"
        android:shortcutId="shortcut_area"
        android:icon="@drawable/ic_shortcut_area"
        android:shortcutShortLabel="@string/navigation_area" >

        <intent
            android:targetPackage="com.calintat.units"
            android:action="com.calintat.units.SHORTCUT_AREA"
            android:targetClass="com.calintat.units.activities.MainActivity" />

    </shortcut>

    <shortcut
        android:enabled="true"
        android:shortcutId="shortcut_volume"
        android:icon="@drawable/ic_shortcut_volume"
        android:shortcutShortLabel="@string/navigation_volume" >

        <intent
            android:targetPackage="com.calintat.units"
            android:action="com.calintat.units.SHORTCUT_VOLUME"
            android:targetClass="com.calintat.units.activities.MainActivity" />

    </shortcut>

    <shortcut
        android:enabled="true"
        android:shortcutId="shortcut_mass"
        android:icon="@drawable/ic_shortcut_mass"
        android:shortcutShortLabel="@string/navigation_mass" >

        <intent
            android:targetPackage="com.calintat.units"
            android:action="com.calintat.units.SHORTCUT_MASS"
            android:targetClass="com.calintat.units.activities.MainActivity" />

    </shortcut>

</shortcuts>

