<shortcuts
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:targetApi="25" >

    <shortcut
        android:shortcutId="shortcut_length"
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_length"
        android:shortcutShortLabel="@string/navigation_length" >

        <intent
            android:action="android.intent.action.MAIN"
            android:targetPackage="com.calintat.sensors"
            android:targetClass="com.calintat.sensors.activities.MainActivity" >

            <extra
                android:name="com.calintat.sensors.api.SHORTCUT_ID"
                android:value="shortcut_length" />

        </intent>

    </shortcut>

    <shortcut
        android:shortcutId="shortcut_area"
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_area"
        android:shortcutShortLabel="@string/navigation_area" >

        <intent
            android:action="android.intent.action.MAIN"
            android:targetPackage="com.calintat.sensors"
            android:targetClass="com.calintat.sensors.activities.MainActivity" >

            <extra
                android:name="com.calintat.sensors.api.SHORTCUT_ID"
                android:value="shortcut_area" />

        </intent>

    </shortcut>

    <shortcut
        android:shortcutId="shortcut_volume"
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_volume"
        android:shortcutShortLabel="@string/navigation_volume" >

        <intent
            android:action="android.intent.action.MAIN"
            android:targetPackage="com.calintat.sensors"
            android:targetClass="com.calintat.sensors.activities.MainActivity" >

            <extra
                android:name="com.calintat.sensors.api.SHORTCUT_ID"
                android:value="shortcut_volume" />

        </intent>

    </shortcut>

    <shortcut
        android:shortcutId="shortcut_mass"
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_mass"
        android:shortcutShortLabel="@string/navigation_mass" >

        <intent
            android:action="android.intent.action.MAIN"
            android:targetPackage="com.calintat.sensors"
            android:targetClass="com.calintat.sensors.activities.MainActivity" >

            <extra
                android:name="com.calintat.sensors.api.SHORTCUT_ID"
                android:value="shortcut_mass" />

        </intent>

    </shortcut>

</shortcuts>